kubernetes/vault/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vault
  labels:
    app: vault
spec:
  selector:
    app: vault
  ports:
  - name: http
    protocol: TCP
    port: 8200
